# LLMRuleArticulation

./: README.md  pyproject.toml  run-all-experiments.sh
experiments/: notes.md
experiments/results/25/: config.json  cout.txt  info.json  run.json
experiments/results/26/: config.json  cout.txt  info.json  run.json
experiments/results/27/: config.json  cout.txt  info.json  run.json
experiments/results/28/: config.json  cout.txt  info.json  run.json
experiments/results/29/: config.json  cout.txt  info.json  run.json
experiments/results/30/: config.json  cout.txt  info.json  run.json
experiments/results/31/: config.json  cout.txt  info.json  run.json
experiments/results/32/: config.json  cout.txt  info.json  run.json
experiments/results/33/: config.json  cout.txt  info.json  run.json
experiments/results/34/: config.json  cout.txt  info.json  run.json
experiments/results/35/: config.json  cout.txt  info.json  run.json
experiments/results/36/: config.json  cout.txt  info.json  run.json
experiments/results/_sources/: capitalization_a0b1cc2e536a2c8c0fd38d66020f5435.py  capitalization_f91c13a35d1287f6ea28fb7c18a1e522.py  evaluator_33cf94b86ede9553df34123302901010.py  evaluator_98798faa03fa222482ffbe547b8f0f9f.py  evaluator_a589d4b9b9c3981a39aee4a3471051ff.py  evaluator_ddd27545e7001f3d67918732b2182b81.py  (+12 more)
report/: neurips_2023.sty  report.tex
src/rule_articulation/: evaluator.py  full_experiment.py  main.py  task_model.py  using_openai_directly.py  utils.py
tests/: test_capitalization_dataset.py  test_datasets.py
(+22 files in other folders)
