[tool.poetry]
name = "rule-articulation"
version = "0.1.0"
description = ""
authors = ["Niels uit de Bos <nielius@gmail.com>"]
readme = "README.md"
packages = [{include = "rule_articulation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
instructor = "^0.4.0"
nltk = "^3.8.1"
datasets = "^2.15.0"
typer = "^0.9.0"
sacred = "^0.8.5"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
